--- a/style.css
+++ b/style.css
@@ -424,8 +424,9 @@ button:disabled { background-color: #484f58; cursor: not-allowed; transform: sca
     text-align: center;
 }
 
-#celebration-overlay, .modal-container {
-    display: none
+#celebration-overlay,
+.modal-container {
+    display: none; /* escondido por padrão */
     position: fixed;
     z-index: 1000;
     left: 0;
@@ -433,12 +434,12 @@ button:disabled { background-color: #484f58; cursor: not-allowed; transform: sca
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
     justify-content: center;
     align-items: center;
     padding: 1rem;
     box-sizing: border-box;
     animation: fadeIn 0.5s ease-in-out;
+}
 }
 .celebration-content, .modal-content {
     background-color: var(--panel-bg);
